# plsfix

./: README.md
.github/workflows/: python.yml
core/: Cargo.toml
core/src/: badness.rs  chardata.rs  fixes.rs  lib.rs
core/src/codecs/: sloppy.rs  utf8_variants.rs
python/: Cargo.toml  plsfix.pyi  pyproject.toml
python/benchmark/: .gitignore  benchmark.py  download.sh
python/src/: lib.rs
